--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "crypto-js": "^4.2.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.80.4"
   },
   "devDependencies": {
     "postcss": "^8",
